# speech_encoder

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/speech_encoder/: __init__.py  assets.py  model.py
