[project]
name = "speech-encoder"
version = "0.1.0"
description = "Simple interface to pretrained speech encoders"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Maxime Poli" }]
dependencies = [
  "fsspec[http]>=2026.2.0",
  "jaxtyping>=0.3.7",
  "numpy>=2.4.2",
  "scikit-learn>=1.8.0",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "prek>=0.3.2",
  "ruff>=0.15.0",
  "tombi>=0.7.28",
  "typos>=1.43.4",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
preview = true
select = [
  "A",  # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "ANN",  # flake8-annotations
  "B",  # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "E",  # pycodestyle error
  "EXE",  # flake8-executable
  "F",  # Pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # flynt
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "NPY",  # NumPy-specific rules
  "PERF",  # Perflint
  "PIE",  # flake8-pie
  "PGH",  # pygrep-hooks
  "PL",  # Pylint
  "PTH",  # flake8-use-pathlib
  "Q",  # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "SLF",  # flake8-slots
  "T10",  # flake8-debugger
  "TC",  # flake8-type-checking
  "TD",  # flake8-todos
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
ignore = ["F722"]

[tool.typos.default.extend-words]
expresso = "expresso"
